test/semantic_errors/invalid_null3.mc
void main() {
    bool a;
    a = NULL;
}